# memorizz

./: .gitignore  LICENCE.txt  README.md  checklist  docker-compose.yml  example.ipynb  init.sql  mongoDbSetup  pyproject.toml  test.ipynb
docs/databases/: postgresql.md
eval/: README.md
eval/longmemeval/: README.md  README_evaluation_architectures.md  download_dataset.py  evaluate_delegate_pattern.py  evaluate_hierarchical_pattern.py  evaluate_memorizz.py
examples/: augmented_query.txt  knowledge_base.ipynb  memagent.ipynb  memagent_single_agent.ipynb  memagent_summarisation.ipynb  memagents_multi_agents.ipynb  persona.ipynb  postgresql_example.py  postgresql_tools_example.py  system_prompt.txt  test-ollama-embed.ipynb  toolbox.ipynb  workflow.ipynb
src/memorizz/: __init__.py  memagent.py  multi_agent_orchestrator.py  task_decomposition.py
src/memorizz/context_window_management/: cwm.py
src/memorizz/database/: __init__.py
src/memorizz/embeddings/: ollama.py  openai.py
src/memorizz/llms/: __init__.py  openai.py
src/memorizz/long_term_memory/: __init__.py  knowledge_base.py
src/memorizz/memory_component/: __init__.py  application_mode.py  conversational_memory_component.py  memory_component.py  memory_mode.py  summary_component.py
src/memorizz/memory_provider/: __init__.py  base.py  memory_type.py
src/memorizz/persona/: README.md  __init__.py  example.ipynb  persona.py  role_type.py
src/memorizz/shared_memory/: __init__.py  shared_memory.py
src/memorizz/short_term_memory/: semantic_cache.py
src/memorizz/tests/: test_memagent_enhanced_tools.py  (+1 more)
(+15 files in other folders)
