[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "memorizz"
version = "0.0.19"
description = "A memory management library for Python"
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
authors = [
    { name = "Richmond Alake", email = "richmond.alake@gmail.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "openai",
    "pymongo",
    "langchain_ollama",
    "ollama"
]

[project.urls]
"Homepage" = "https://github.com/RichmondAlake/memorizz"
"Bug Tracker" = "https://github.com/RichmondAlake/memorizz/issues"